implemented insert insertMany find
